[gd_scene load_steps=5 format=3 uid="uid://w30vum0s5f0g"]

[ext_resource type="Script" uid="uid://cfnbs5ic7yaox" path="res://scenes/Weapons/Melees/overhard_egg.gd" id="1_iflvl"]
[ext_resource type="PackedScene" uid="uid://br2s6r534yv13" path="res://scenes/Weapons/Melees/EggSlap.tscn" id="2_fyhn0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x3feo"]
radius = 232.009

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uspxi"]
random_pitch = 1.5

[node name="OverhardEgg" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_iflvl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x3feo")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="MeleePoint" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(1, -150)

[node name="Hit" parent="WeaponPivot/MeleePoint" instance=ExtResource("2_fyhn0")]
unique_name_in_owner = true
visible = false
position = Vector2(-7.45058e-09, -135)

[node name="MeleePoint2" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(0, 150)
rotation = 3.14159

[node name="Hit2" parent="WeaponPivot/MeleePoint2" instance=ExtResource("2_fyhn0")]
unique_name_in_owner = true
visible = false
position = Vector2(9.09495e-13, 134)
rotation = 3.14159

[node name="MeleePoint3" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(-150, 0)
rotation = 4.71239

[node name="Hit3" parent="WeaponPivot/MeleePoint3" instance=ExtResource("2_fyhn0")]
unique_name_in_owner = true
visible = false
position = Vector2(9.09495e-13, 134)
rotation = 3.14159

[node name="MeleePoint4" type="Marker2D" parent="WeaponPivot"]
unique_name_in_owner = true
position = Vector2(150, -1)
rotation = 1.5708

[node name="Hit4" parent="WeaponPivot/MeleePoint4" instance=ExtResource("2_fyhn0")]
unique_name_in_owner = true
visible = false
position = Vector2(9.09495e-13, 134)
rotation = 3.14159

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="OverhardEggASP" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_uspxi")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
